@@ -13,7 +13,7 @@
  * this program; if not, write to the Free Software Foundation, Inc., 51
  * Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  *
- * Copyright 2013 SkySQL Ab
+ * Copyright 2013-2014 SkySQL Ab
  */
 
 package com.skysql.monitor;
