@@ -16,7 +16,7 @@
 # this program; if not, write to the Free Software Foundation, Inc., 51
 # Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 #
-# Copyright 2013 (c) SkySQL Ab
+# Copyright 2013-2014 (c) SkySQL Ab
 #
 # Author      : Stefano Simonelli, Massimo Siani
 # Version     : 2.22
